# scoreboard-rs

./: .gitignore  Cargo.toml  README.md
src/: config.rs  db.rs  debug_config.rs  main.rs  score.rs
