[package]
name = "scoreboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "24.0.0"
log = "0.4.17"
simple_logger = "4.2.0"
systemd-journal-logger = "1.0.0"
scoreboard_db = { path = "../scoreboard_db" }